[POST-1] Fix testes Mvn clean test on terminal return all tests